mac dmg build updates